# ci40-weather-station

./: .travis.yml  Makefile  README.md  dumpReading.c
weather-station/: CMakeLists.txt  app.c  dumpReading.c  types.h  wu.c  wu.h
